app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";
@import "twitter/bootstrap/responsive";

// Set the correct sprite paths
@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');

// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
@fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
@fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
@fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');

// Font Awesome
@import "fontawesome";

// Your custom LESS stylesheets goes here
//
// Since bootstrap was imported above you have access to its mixins which
// you may use and inherit here
//
// If you'd like to override bootstrap's own variables, you can do so here as well
// See http://twitter.github.com/bootstrap/less.html for their names and documentation
//
// Example:
@linkColor: #3449F5;
@linkHoverColor: #131E76;

/* old  / guest
@light_blue: #bff3ff;
@bright_blue: #00d0ff;
@orange: #ff6340;
*/
@lighter_grey: #EFEFEF;
@light_grey: #eeeeee;
@grey: #dcdcdc;
@dark_grey: #555;
@light_wood_brown: #d79c64;
@lighter_wood_brown: lighten(@light_wood_brown, 20%);
@wood_brown: #5C250F;
@dark_brown: darken(@wood_brown, 40%);
@green: #6DB641;
@red: #B6262C;

@navbarBackground: @dark_brown;
@navbarBackgroundHighlight: @dark_brown;
@navbarLinkColor: @light_wood_brown;
@navbarHeight: 2em;

@baseFontSize: 14px;


@import "util";
@import "forms";
@import "dashboards";
@import "footer";


.input-append .add-on, .input-append .btn {
	margin-left: -4px;
} 
#appendedInputButton {
	margin-top:9px;
}

body {
	padding-top: 0;
	background: black url(//duv2rxyjq20ja.cloudfront.net/wlcom1/backgrounds/wood.jpg) top center no-repeat fixed;
	
	#header {
		.navbar {
			.nav > li > a {
				text-shadow: none;
			}
			.nav {
				margin-top: 0.5em;
			}
			#admin-nav-list li{
				padding-left: 0.8em;
			}
			.brand {
				padding-bottom: 2px;
				 img {
					width: 80%;
				}
			}
		}
	}
	
	#main-wrapper {
		min-height:100%;
		#main {
			.prettybox;
			padding: 3em 4em;
			margin-top: 1.5em;
			h1 {
				margin-top: 1em;
			}
		}	
		h1, h2, h2 a, h3, h4, h5, p, li, table {
			color: @dark_brown;
			&:hover {
				text-decoration: none;
			}
		}
		h1 {
			clear:both;
		}
		table {
			.table;
			width: auto;
			th, td {
				padding: 10px 10px 9px;
				line-height: 18px;
				text-align: left;
			}
		}
		.dataTables_wrapper {
			margin-top: 1em;
			margin-bottom: 4em;
			label, select, input[type="text"] {
				display: inline;
			}
			select {
				width: 4em;
			}	
			.dataTable {
				.table;
				.table-striped;
				border: 1px solid @dark_grey;
				.sorting_asc, .sorting_desc {
					background-color: @lighter_grey;
				}
			}
			.dataTables_paginate {
				.pagination;
				margin-top: 0;
				.paginate-button {
					.btn;
				}
			}
		}
		.btn img {
			width: 30%;
		}
		.new {
			display: inline-block;
			float: right;
			padding: 0.7em 0em 0.4em 0.5em;
			margin-top: -2.25em;
			margin-bottom: 2em;
			img {
				width: 50px;
				margin-top: -7px;
				margin-left: 1px;
			}
		}
		.alert {
			.box-shadow(inset 0 1px 3px rgba(34,25,25,0.6);
			.border-radius(0);
			padding: 8px 35px 8px 14px;
			margin-top: -1.3em;
		}
	}
}

